--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,4 +1,8 @@
+import java.sql.DatabaseMetaData
+
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+apply plugin: 'signing'
 
 android {
     compileSdkVersion 25
@@ -23,4 +27,79 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+group = "com.mechdome"
+archivesBaseName = "MechDome-Api"
+version = "0.1"
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'MechDome Application'
+                packaging 'aar'
+                artifactId 'MechDome-Api'
+                groupId 'com.mechdome'
+                version '0.1'
+                // optionally artifactId can be defined here
+                description 'Pushing MechDome Application to Maven Central repo'
+                url 'http://www.mechdome.com'
+
+                scm {
+                    connection 'scm:git:https://github.com/mechdome/API.git'
+                    developerConnection 'scm:git:https://github.com/mechdome/API.git'
+                    url 'https://github.com/mechdome/API/tree/master'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'Nandu'
+                        name 'Dayananda Saraswathi Ampapathina'
+                        email 'nandu@mechdome.com'
+                    }
+                }
+            }
+        }
+    }
 }
